# YESS-jvc-nc-portfolio

./: .gitignore  CMakeLists.txt  ConditionCodes.C  ConditionCodes.cpp  ConditionCodesTester.C  DecodeStage.C  DecodeStage.cpp  DecodeStage.h  ExecuteStage.C  ExecuteStage.h  FetchStage.C  FetchStage.cpp  FetchStage.h  Loader.C  Memory.C  MemoryStage.C  MemoryStage.h  MemoryTester.C  README.md  RegisterFile.C  RegisterFile.cpp  Tools.C  Tools.h  WritebackStage.C  WritebackStage.cpp  WritebackStage.h  absVal.ys  lab4  makefile  notes.txt  powers.ys  run.sh  yess  ~.git-cred
Outputs/: irmovq.sdump
